--- a/src/assets/css/responsive/portfolio_res.css
+++ b/src/assets/css/responsive/portfolio_res.css
@@ -1,30 +1,41 @@
-@media (max-width: 1024px){
-    .portfolio-box {
-        margin-top: 50px !important;
+@media (max-width: 1024px) {
+    .blogs-effect {
+        transition: all 1s ease-in-out;
+        margin-top: -90px !important;
     }
+
+    .portfolio-box {
+        margin-top: 0px !important;
+        transition: all 0.5s ease-in-out;
+    }
+
+    .blogs-effect-active {
+        transition: all 0.5s ease-in-out;
+        margin-top: 0px !important;
+    }
+
+    .portfolio-effect-active {
+        transition: all 0.5s ease-in-out;
+        margin-top: 60px !important;
+    }
+
     .portfolio-category {
         margin-bottom: -80px;
     }
-    .blogs-box {
+
+    /* .blogs-box {
         padding: 0 20px !important;
-    }
+    } */
     .blogs-res {
         width: 100% !important;
         height: unset !important;
     }
 }
-@media (max-width: 1023px){
-    
-}
-@media (max-width: 768px){
-    .category-list ul {
-        flex-direction: column !important;
-    }
-   
-}
-@media (max-width: 767px){
-    
-}
-@media (max-width: 500px){
-    
-}
+
+@media (max-width: 1023px) {}
+
+@media (max-width: 768px) {}
+
+@media (max-width: 767px) {}
+
+@media (max-width: 500px) {}
