--- a/src/assets/css/responsive/responsive.css
+++ b/src/assets/css/responsive/responsive.css
@@ -5,31 +5,72 @@
     .hide-on-pc {
         display: block;
     }
-    .active-menu-bar {
-        top: 99px !important;
-    }
     .menu-bar {
         display: none;
     }
-
     .menu-bar__list {
         display: flex;
         flex-direction: column;
         /* display: none; */
     }
-    .menu-bar-moblie-res {
-        position: absolute;
+    .menu-bar__link:focus {
+        color: #fff;
+    }
+    .menu-bar__link {
+        color: #fff !important;
+        font-size: 1.7rem !important;
+        text-transform: unset !important;
+        line-height: 2rem;
+        font-family: "Playfair Display", serif;
+    }
+    .header-menu-mobile {
+        position: fixed;
         left: 0;
         right: 0;
-        background-color: #f6f6f6;
-        top: -200px;
-        padding: 20px;
+        background-color: rgba(0, 0, 0, 0.9);
+        top: 0;
+        bottom: 0;
+        padding: 15px;
         transition: top ease-in-out 0.5s;
         z-index: -1;
-        box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+        opacity: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        font-family: "Playfair Display", serif;
+        transition: all 0.5s ease-in-out;
+        visibility: hidden;
     }
-    .menu-bar__link:focus {
-        color: #000;
+    .menu-bar__item {
+        opacity: 0;
+    }
+    .menu-bar__item:nth-child(1) {
+        transition: all 1.4s ease-in-out;
+    }
+    .menu-bar__item:nth-child(2) {
+        transition: all 1.8s ease-in-out;
+    }
+    .menu-bar__item:nth-child(3) {
+        transition: all 2.2s ease-in-out;
+    }
+    .menu-bar__item:nth-child(4) {
+        transition: all 2.4s ease-in-out;
+    }
+    .menu-bar__item:nth-child(5) {
+        transition: all 2.8s ease-in-out;
+    }
+    .logowhite {
+        width: 88px;
+        height: 33px;
+        display: block;
+    }
+    .logowhite img {
+        width: 100%;
+        height: 100%;
+    }
+    .wrap-header {
+        padding: 15px !important;
     }
 }
 @media (max-width: 767px) {
